移动端交互行为完成

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -56,7 +56,7 @@ body {
 }
 
 #app {
-    width: 520px;
+    width: 512px;
     margin: 34px auto;
 }
 
@@ -66,7 +66,7 @@ body {
     width: 512px;
     height: 512px;
     overflow: hidden;
-    box-shadow: 0px 0px 17px #000000;
+    border: 2px solid #333333;
 }
 
 canvas {
@@ -83,8 +83,8 @@ canvas {
 
 .color-card {
     display: inline-block;
-    width: 22px;
-    height: 22px;
+    width: 21px;
+    height: 21px;
     background-color: currentColor;
     border: 1px solid #000;
     border-radius: 3px;
